--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -40,9 +40,11 @@
 
 .detail {
   display: flex;
+
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
+  font-size: 1.4rem;
 }
 
 .description {
@@ -52,9 +54,12 @@
   box-shadow: var(--shadow-light);
   padding: 3rem;
   margin-right: 4.5rem;
-  font-size: 1.4rem;
 }
 
 .user-reviews {
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
